style.css
body {
    background-color: #19191b;
    margin: 0;
    padding: 10px;
    display: flex;
    flex-direction: column;
    min-width: 400px;
    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
}

#input-el {
    color: white;
    background-color: #3a3a3d;
    border: none;
    border-radius: 10px;
    padding: 10px;
    width: 100%;
    box-sizing: border-box;
    margin-bottom: 5px;
}

#buttons {
    display: flex;
    gap: 5px;
}

#save-btn, #delete-btn, #tab-btn {
    border-radius: 10px;
    margin-top: 5px;
    width: 33.33333%;
    color: white;
    padding: 10px 20px;
    border: none;
    font-weight: bold;
}

#save-btn, #tab-btn {
    background-color: #5f9341;
    transition: background-color 0.25s ease;
}

#save-btn:hover, #tab-btn:hover {
    background-color: rgba(95, 147, 65, 0.8);
}

#delete-btn {
    background-color: red;
    transition: background-color 0.25s ease;
}

#delete-btn:hover {
    background-color: rgba(255, 0, 0, 0.8);
}

#ul-el {
    list-style-type: none;
    padding: 0;
}

#ul-el li {
    margin-top: 5px;
    background-color: #3a3a3d;
    padding: 5px;
    border-radius: 5px;
    display: flex;
    justify-content: space-between;
    align-items: center;
}

#ul-el li a {
    color: white;
    text-decoration: none;
    margin-left: 10px;
}

#delete-item-btn {
    background: none;
    padding: 5px;
    border: none;
    height: 20px;
    width: 20px;
    margin: 5px 10px;
    border-radius: 50%;
    transition: background-color 0.25s ease;
}

#delete-item-btn:hover {
    background-color: #434346;
}


#delete-item-btn img{
    height: 1.25rem;
    width: 1.25rem;
}

